--- a/MealsBackend/Web.Release.config
+++ b/MealsBackend/Web.Release.config
@@ -26,6 +26,8 @@
         mode="RemoteOnly" xdt:Transform="Replace">
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
+      
     -->
+    <customErrors mode="Off"/>
   </system.web>
 </configuration>
